# comforter

./: .gitignore  AGENTS.md  NewModels_MORTALITY_20260222.R  Newmodels20260127.R  README.md  Tripod-Checklist-Prediction-Model-Development-and-Validation-Word.docx  create_publication_auc_forest.py  create_publication_quality_figures.py  group_penalized_logistic.py  internal_external_validation_common.py  main.py  notes.txt  plot_death_calibration_curve_final_models.py  plot_death_roc_auc.py  plot_death_roc_curve_final_models.py  plot_internal_external_validation_death_group_ridge.py  plot_internal_external_validation_death_publication.py  plot_internal_external_validation_death_publication_remain.py  plot_internal_external_validation_death_tabicl_by_site.py  pyproject.toml  references.bib  remain-coefficients.csv  report_remain_external_validation.docx  report_remain_external_validation.html  report_remain_external_validation.qmd  report_remain_external_validation_verify.html  run_group_lasso_death.py  run_group_lasso_death_tune.py  run_group_linear_feature_engineering_validation.py  run_group_ridge_death_tune.py  run_internal_external_calibration_rank_death.py  run_internal_external_validation_death.py  run_internal_external_validation_death_tabicl_calibration_tuning.py  run_internal_external_validation_death_tabicl_feature_search.py  run_internal_external_validation_death_tabicl_feature_search_simple.py  run_internal_external_validation_news_logistic.py  run_internal_external_validation_remain_logistic.py  run_predictor_stability_death.py  run_random_forest_death_tune.py  (+8 more)
(+43 files in other folders)
